--- a/index.html
+++ b/index.html
@@ -5,15 +5,52 @@
   <title>3D model in AR</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
-    body { text-align: center; font-family: sans-serif; margin-top: 50px; }
+    body, h1, button {
+      font-family: 'Montserrat', sans-serif;
+    }
+
+    body {
+      text-align: center;
+      margin-top: 50px;
+      color: #333;
+    }
+
+    h1 {
+      font-weight: 600;
+      margin-bottom: 24px;
+    }
+    model-viewer#viewer {
+      display: block;
+      width: 80%;
+      max-width: 600px;
+      height: 400px;
+      margin: 0 auto 24px;
+    }
+
     button {
-      font-size: 18px;
-      padding: 12px 24px;
+      display: inline-block;
+      font-size: 16px;
+      font-weight: 600;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+      padding: 14px 28px;
       border: none;
       border-radius: 8px;
-      background-color: #333;
-      color: white;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      color: #fff;
       cursor: pointer;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+
+    button:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
+    }
+
+    button:focus {
+      outline: none;
+      box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.5);
     }
   </style>
 </head>
