--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>3D model in AR</title>
+  <title>Experience Your Design in AR</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
     body, h1, button {
@@ -55,7 +55,7 @@
   </style>
 </head>
 <body>
-<h1>3D model in AR</h1>
+<h1>Experience Your Design in AR</h1>
 
 <model-viewer id="viewer"
               alt="Gray Marble Tile"
@@ -68,7 +68,7 @@
               exposure="1.0">
 </model-viewer>
 
-<button id="ar-button">📱 View in AR</button>
+<button id="ar-button">Launch AR Experience</button>
 
 <script>
   const viewer = document.getElementById('viewer');
